# breast-cancer-detection

./: .gitignore  LICENSE  README.md  environment.yml  main.py  monitor_training.py  pyproject.toml
configs/: default.yaml
inference/: inference_pipeline.py
mlruns/0/: meta.yaml
mlruns/668366094013215376/: meta.yaml
mlruns/668366094013215376/0a51efc9b11940259c46719abb2bdc97/: meta.yaml
mlruns/668366094013215376/0a51efc9b11940259c46719abb2bdc97/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/668366094013215376/af2d8b029b0d4bb7bac35c84940dbb8d/: meta.yaml
models/: models.py
notebooks/: 0_data_definition.ipynb  0_eda.ipynb  1_eda.ipynb  2_train.ipynb  3_test.ipynb  3_train.ipynb  4_test.ipynb
preprocessing/: preprocessing.py
results/tensorboard_logs/version_0/: events.out.tfevents.1752926677.Edwards-MacBook-Pro-2.local.13041.0
results/tensorboard_logs/version_1/: events.out.tfevents.1752926922.Edwards-MacBook-Pro-2.local.13798.0  hparams.yaml
results/tensorboard_logs/version_2/: events.out.tfevents.1752927790.Edwards-MacBook-Pro-2.local.14852.0
results/tensorboard_logs/version_3/: events.out.tfevents.1752930709.Edwards-MacBook-Pro-2.local.17348.0
results/tensorboard_logs/version_4/: events.out.tfevents.1752932087.Edwards-MacBook-Pro-2.local.20878.0
results/tensorboard_logs/version_5/: events.out.tfevents.1752939740.Edwards-MacBook-Pro-2.local.32804.0
training/: evaluation.py  training_pipeline.py
utils/: constants.py  dataset.py  loss_function.py  lrs_scheduler.py  mlflow_utils.py  tensorboard_utils.py  utils.py
(+3 files in other folders)
