[tool.poetry]
name = "breast-cancer-detection"
version = "0.1.0"
description = "Breast cancer detection using Vision Transformers and multi-view fusion"
authors = ["Edward Sims <edward.sims@twokai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kaggle = "^1.7.4.5"
pandas = "^2.3.1"
numpy = "^1.24.0"
torch = "^2.1.0"
torchvision = "^0.16.0"
transformers = "^4.35.0"
timm = "^0.9.12"
albumentations = "^1.3.1"
opencv-python = "^4.8.1"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
tqdm = "^4.66.0"
pydicom = "^2.4.3"
wandb = "^0.16.0"
lightning = "^2.1.0"
pytorch-lightning = "^2.1.0"
omegaconf = "^2.3.0"
hydra-core = "^1.3.0"
einops = "^0.7.0"
# xformers = "^0.0.22"  # Removed due to build issues
accelerate = "^0.24.0"
bitsandbytes = "^0.41.0"
optuna = "^3.4.0"
mlflow = "^2.8.0"
tensorboard = "^2.14.0"
pillow = "^10.0.0"
imgaug = "^0.4.0"
pretrainedmodels = "^0.7.4"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
